# Win-EDR

./: .gitignore  README.md
.github/workflows/: rust-clippy.yml  rust.yml
edr-agent/: Cargo.toml  dockerfile
edr-agent/src/: logging.rs  main.rs  model.rs  service.rs  worker.rs
edr-agent/src/etw/: baseline.rs  mod.rs  process.rs
edr-agent/src/process/: cache.rs  enrich.rs  mod.rs  snapshot.rs
