[package]
name = "edr-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Services",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Diagnostics_Etw",
]}

tracing = "0.1"
tracing-subscriber = "0.3"
wasapi = "0.22.0"
